CHANGES
=======

0.3 (Unreleased)
----------------

- Added PortMapperWorker

- Added HttpClient

- Better client connection errors handling


0.2
---

- Fix packaging